[package]
name = "pest-fmt-safe"
version = "0.1.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest_fmt = { git = "https://github.com/pest-parser/pest-fmt" }
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
